忽略掉OdinInspector所在的Plugins文件夹。

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ MemoryCaptures/
 Assets/BundleResource/LuaScripts
 Assets/BundleResource/LuaScripts.meta
 
+Assets/Plugins/
+Assets/Plugins.meta
+
 /*.csproj
 /*.sln
 /*.user
